# prtgitlog

./: .gitignore  CHANGELOG.md  README.md  makefile  publications.html  pyproject.toml  setup.py  sitemap.xml  tmp.py
.timetracker/: config
doc/md/: README_TBD.md  README_example_succint.md  README_example_succint_cmdline.md  README_example_succint_script.md
prtgitlog/: __init__.py  cli.py  commit_aliases.py  commit_files.py  commit_info.py  gitlog.py  gitlog_strm.py  main.py  prtlog.py
src/gitlog_prt/: cli.py
src/prtgitlog/: __init__.py  cli.py  commit_aliases.py  commit_files.py  commit_info.py  data.py  gitlog.py  gitlog_strm.py  main.py  prthdrs.py  prtlog.py  sortbytime.py
src/tests/: test_cli.py
